--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </ul>
           </div>
           <div class="btn-menu">
-            <button class="button-menu">FALE COMIGO</button>
+            <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+" target="_blank" class="action_button"><button class="button-menu">FALE COMIGO</button></a>
           </div>
       </nav>
     </div>
@@ -135,7 +135,7 @@
         que vai romper as barreiras a nível de conhecimento entre você e seu
         próprio cão.
       </p>
-      <button class="button-section-2">FALE COMIGO</button>
+      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+" target="_blank" class="action_button"><button class="button-section-2">SAIBA MAIS</button></a>
     </div>
     <div class="content-2-section-2">
       <img src="./src/images/comportamental-cognitivo.webp">
@@ -153,7 +153,7 @@
         voltado para um novo modelo de comportamento,
         uma nova relação que fara dele um cão mais tranquilo e equilibrado.
       </p>
-      <button class="button-section-3">FALE COMIGO</button>
+      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+" target="_blank" class="action_button"><button class="button-section-3">FALE COMIGO</button></a>
     </div>
   </section>
   <!----SECTION 3----->
@@ -165,7 +165,7 @@
         a maioria
         dos alunos já sentem diferença em uma semana, alguns relatam de um dia para o outro.
       </p>
-      <button class="button-section-4">SAIBA MAIS</button>
+      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+" target="_blank" class="action_button"><button class="button-section-4">SAIBA MAIS</button></a>
     </div>
     <div class="content-2-section-4">
       <img src="./src/images/treinamento-intensivo.webp">
@@ -182,7 +182,7 @@
       <p>Nesse modelo o cão chega de manhã e vai embora no final da tarde,
         passando por diversos tipos de treinamentos e brincadeiras.
       </p>
-      <button class="button-section-5">SAIBA MAIS</button>
+      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+" target="_blank" class="action_button"><button class="button-section-5">FALE COMIGO</button></a>
     </div>
   </section>
   <!----SECTION 5----->
@@ -199,7 +199,7 @@
           Nossa metodologia cognitiva baseia-se em buscar
           o equilíbrio entre famílias interespécies promovendo uma relação como você jamais imaginou.
         </p>
-        <button class="button-section-6">MEU INSTAGRAM</button>
+        <a class="button-section-6" href="https://www.instagram.com/alerachid.adestramento/" target="_blank">MEU INSTAGRAM</a>
       </div>
       <div class="content-2-section-4">
         <img src="./src/images/pic6.webp">
