--- a/index.html
+++ b/index.html
@@ -24,31 +24,32 @@
   <div class="container-banner">
     <div class="content-2-banner">
       <nav class="nav-wrapper">
-          <div>
-            <img class="logo-main scale-with-grid" src="./src/images/favicon.webp" alt="Keep Calm Adestramento">
-          </div>
-          <div>
-            <a href="#" data-activates="menu-mobile" class="button-collapse">
-              <i class="material-icons">menu</i>
-            </a>
-            <ul class="right hide-on-med-and-down">
-              <li><a href="#">INÍCIO</a></li>
-              <li><a href="#">TREINAMENTOS</a></li>
-              <li><a href="#">SOBRE MIM</a></li>
-              <li><a href="#">SERVIÇOS</a></li>
-              <li><a href="#">CONTATO</a></li>
-            </ul>
-            <ul class="side-nav" id="menu-mobile">
-              <li><a href="#">INÍCIO</a></li>
-              <li><a href="#">TREINAMENTOS</a></li>
-              <li><a href="#">SOBRE MIM</a></li>
-              <li><a href="#">SERVIÇOS</a></li>
-              <li><a href="#">CONTATO</a></li>
-            </ul>
-          </div>
-          <div class="btn-menu">
-            <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+" target="_blank" class="action_button"><button class="button-menu">FALE COMIGO</button></a>
-          </div>
+        <div>
+          <img class="logo-main scale-with-grid" src="./src/images/favicon.webp" alt="Keep Calm Adestramento">
+        </div>
+        <div>
+          <a href="#" data-activates="menu-mobile" class="button-collapse">
+            <i class="material-icons">menu</i>
+          </a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="#">INÍCIO</a></li>
+            <li><a href="#">TREINAMENTOS</a></li>
+            <li><a href="#">SOBRE MIM</a></li>
+            <li><a href="#">SERVIÇOS</a></li>
+            <li><a href="#">CONTATO</a></li>
+          </ul>
+          <ul class="side-nav" id="menu-mobile">
+            <li><a href="#">INÍCIO</a></li>
+            <li><a href="#">TREINAMENTOS</a></li>
+            <li><a href="#">SOBRE MIM</a></li>
+            <li><a href="#">SERVIÇOS</a></li>
+            <li><a href="#">CONTATO</a></li>
+          </ul>
+        </div>
+        <div class="btn-menu">
+          <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+"
+            target="_blank" class="action_button"><button class="button-menu">FALE COMIGO</button></a>
+        </div>
       </nav>
     </div>
     <div class="content-banner">
@@ -57,15 +58,17 @@
         <p> O seu melhor amigo precisa de ajuda? Conte comigo! </p>
         <button class="button">Saiba mais</button>
       </div>
-      <div class="content-banner-depoimentos"></div>
-    </div>
-    <!--HEADER DEPOIMENTOS-->
-    <div class="header-depoimentos">
-      <div class="content-depoimentos">
-        <img src="./src/images/slider-pic1.webp">
-        <img src="./src/images/slider-pic2.webp">
+      <div class="content-banner-depoimentos">
+        <div class="header-depoimentos">
+          <div class="content-depoimentos">
+            <img src="./src/images/slider-pic1.webp">
+            <img src="./src/images/slider-pic2.webp">
+          </div>
+        </div>
       </div>
     </div>
+    <!--HEADER DEPOIMENTOS-->
+
   </div>
   </div>
   <!---HEADER E BANNER-->
@@ -135,7 +138,8 @@
         que vai romper as barreiras a nível de conhecimento entre você e seu
         próprio cão.
       </p>
-      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+" target="_blank" class="action_button"><button class="button-section-2">SAIBA MAIS</button></a>
+      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+"
+        target="_blank" class="action_button"><button class="button-section-2">SAIBA MAIS</button></a>
     </div>
     <div class="content-2-section-2">
       <img src="./src/images/comportamental-cognitivo.webp">
@@ -153,7 +157,8 @@
         voltado para um novo modelo de comportamento,
         uma nova relação que fara dele um cão mais tranquilo e equilibrado.
       </p>
-      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+" target="_blank" class="action_button"><button class="button-section-3">FALE COMIGO</button></a>
+      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+"
+        target="_blank" class="action_button"><button class="button-section-3">FALE COMIGO</button></a>
     </div>
   </section>
   <!----SECTION 3----->
@@ -165,7 +170,8 @@
         a maioria
         dos alunos já sentem diferença em uma semana, alguns relatam de um dia para o outro.
       </p>
-      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+" target="_blank" class="action_button"><button class="button-section-4">SAIBA MAIS</button></a>
+      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+"
+        target="_blank" class="action_button"><button class="button-section-4">SAIBA MAIS</button></a>
     </div>
     <div class="content-2-section-4">
       <img src="./src/images/treinamento-intensivo.webp">
@@ -182,7 +188,8 @@
       <p>Nesse modelo o cão chega de manhã e vai embora no final da tarde,
         passando por diversos tipos de treinamentos e brincadeiras.
       </p>
-      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+" target="_blank" class="action_button"><button class="button-section-5">FALE COMIGO</button></a>
+      <a href="https://wa.me/5511966133163?text=Ol%C3%A1%2C+vim+pelo+seu+site.+Pode+me+ajudar%3F+Meu+nome+%C3%A9+"
+        target="_blank" class="action_button"><button class="button-section-5">FALE COMIGO</button></a>
     </div>
   </section>
   <!----SECTION 5----->
@@ -199,7 +206,8 @@
           Nossa metodologia cognitiva baseia-se em buscar
           o equilíbrio entre famílias interespécies promovendo uma relação como você jamais imaginou.
         </p>
-        <a class="button-section-6" href="https://www.instagram.com/alerachid.adestramento/" target="_blank">MEU INSTAGRAM</a>
+        <a class="button-section-6" href="https://www.instagram.com/alerachid.adestramento/" target="_blank">MEU
+          INSTAGRAM</a>
       </div>
       <div class="content-2-section-4">
         <img src="./src/images/pic6.webp">
@@ -314,19 +322,11 @@
         <div class="content-form">
           <form class="formulario" action="/pagina-processa-dados-do-form" method="post">
             <div class="form-topo">
-              <div class="one-input">
-                <input class="input-name" type="text" id="name" placeholder="Seu Nome" />
-              </div>
-              <div class="two-input">
-                <input class="input-tel" type="tel" id="tel" placeholder="Seu Telefone" />
-              </div>
+              <input class="input-name" type="text" id="name" placeholder="Seu Nome" />
+              <input class="input-tel" type="tel" id="tel" placeholder="Seu Telefone" />
             </div>
-            <div class="tree-input">
-              <input class="input-assunto" type="text" id="assunto" placeholder="Assunto" />
-            </div>
-            <div class="for-input">
-              <textarea class="text-description" id="msg" placeholder="Mensagem"></textarea>
-            </div>
+            <input class="input-assunto" type="text" id="assunto" placeholder="Assunto" />
+            <textarea class="text-description" id="msg" placeholder="Mensagem"></textarea>
             <div>
               <button class="button-form" type="submit">Enviar mensagem</button>
             </div>
