--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
   <script> $(function () { $(".button-collapse").sideNav(); });</script>
   <!---HEADER E BANNER-->
-  <div class="container-banner">
+  <div class="container-banner" id="inicio">
     <div class="content-2-banner">
       <nav class="nav-wrapper">
         <div>
@@ -32,18 +32,18 @@
             <i class="material-icons">menu</i>
           </a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="#">INÍCIO</a></li>
-            <li><a href="#">TREINAMENTOS</a></li>
-            <li><a href="#">SOBRE MIM</a></li>
-            <li><a href="#">SERVIÇOS</a></li>
-            <li><a href="#">CONTATO</a></li>
+            <li><a href="#inicio">INÍCIO</a></li>
+            <li><a href="#treinamento">TREINAMENTOS</a></li>
+            <li><a href="#sobre">SOBRE MIM</a></li>
+            <li><a href="#servicos">SERVIÇOS</a></li>
+            <li><a href="#contato">CONTATO</a></li>
           </ul>
           <ul class="side-nav" id="menu-mobile">
-            <li><a href="#">INÍCIO</a></li>
-            <li><a href="#">TREINAMENTOS</a></li>
-            <li><a href="#">SOBRE MIM</a></li>
-            <li><a href="#">SERVIÇOS</a></li>
-            <li><a href="#">CONTATO</a></li>
+            <li><a href="#inicio">INÍCIO</a></li>
+            <li><a href="#treinamento">TREINAMENTOS</a></li>
+            <li><a href="#sobre">SOBRE MIM</a></li>
+            <li><a href="#servicos">SERVIÇOS</a></li>
+            <li><a href="#contato">CONTATO</a></li>
           </ul>
         </div>
         <div class="btn-menu">
@@ -61,8 +61,8 @@
       <div class="content-banner-depoimentos">
         <div class="header-depoimentos">
           <div class="content-depoimentos">
-            <img src="./src/images/slider-pic1.webp">
-            <img src="./src/images/slider-pic2.webp">
+            <img src="./src/images/slider-pic1.webp" alt="depoimento:O Alexandre é um profissional preparado">
+            <img src="./src/images/slider-pic2.webp" alt="depoimento:Somos 5 estrelas nas avaliações do google">
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
   </div>
   <!---HEADER E BANNER-->
   <!----SECTION 1---->
-  <section class="section-1">
+  <section class="section-1" id="treinamento">
     <div class="content-section-1">
       <!--TITULO-->
       <h2 class="section-1-titulo">A EDUCAÇÃO DO SEU PET EM OUTRO NÍVEL</h2>
@@ -82,7 +82,7 @@
         <div class="trilha-comandos">
           <div class="trilha-conteudo">
             <h5>COMANDOS</h5>
-            <div class="trilha-pic-2"><img class="scale-with-grid" src="./src/images/pic2-short.webp" alt="pic2-short">
+            <div class="trilha-pic-2"><img class="scale-with-grid" src="./src/images/pic2-short.webp" alt="Comandos">
             </div>
             <p> Sentar, deitar e ficar </p>
           </div>
@@ -90,7 +90,7 @@
         <div class="trilha-passeio">
           <div class="trilha-conteudo">
             <h5>PASSEIO</h5>
-            <div class="trilha-pic-1"><img class="scale-with-grid" src="./src/images/pic1-short.webp" alt="pic1-short">
+            <div class="trilha-pic-1"><img class="scale-with-grid" src="./src/images/pic1-short.webp" alt="Passeio">
             </div>
             <p>Sem puxar ou arrastar</p>
           </div>
@@ -98,7 +98,7 @@
         <div class="trilha-autocontrole">
           <div class="trilha-conteudo">
             <h5>AUTOCONTROLE</h5>
-            <div class="trilha-pic-1"><img class="scale-with-grid" src="./src/images/pic2-short.webp" alt="pic2-short">
+            <div class="trilha-pic-1"><img class="scale-with-grid" src="./src/images/pic2-short.webp" alt="Autocontrole">
             </div>
             <p>Sem morder ou pular</p>
           </div>
@@ -106,7 +106,7 @@
         <div class="trilha-socializacao">
           <div class="trilha-conteudo">
             <h5>SOCIALIZAÇÃO</h5>
-            <div class="trilha-pic-1"><img class="scale-with-grid" src="./src/images/pic1-short.webp" alt="pic1-short">
+            <div class="trilha-pic-1"><img class="scale-with-grid" src="./src/images/pic1-short.webp" alt="Socialização">
             </div>
             <p>Socialização Canina Habilidosa</p>
           </div>
@@ -114,7 +114,7 @@
         <div class="trilha-saude">
           <div class="trilha-conteudo">
             <h5>SAÚDE</h5>
-            <div class="trilha-pic-1"><img class="scale-with-grid" src="./src/images/pic2-short.webp" alt="pic2-short">
+            <div class="trilha-pic-1"><img class="scale-with-grid" src="./src/images/pic2-short.webp" alt="Saúde">
             </div>
             <p>Cooperação com higiêne e saúde</p>
           </div>
@@ -142,14 +142,14 @@
         target="_blank" class="action_button"><button class="button-section-2">SAIBA MAIS</button></a>
     </div>
     <div class="content-2-section-2">
-      <img src="./src/images/comportamental-cognitivo.webp">
+      <img src="./src/images/comportamental-cognitivo.webp" alt="Comportamento Cognitivo">
     </div>
   </section>
   <!----SECTION 2----->
   <!----SECTION 3----->
   <section class="section-3">
     <div class="content-2-section-3">
-      <img src="./src/images/treinamento-a-domicilio.webp">
+      <img src="./src/images/treinamento-a-domicilio.webp" alt="Treinamento Intensivo">
     </div>
     <div class="content-1-section-3">
       <h2 class="section-3-titulo">TREINAMENTO <br> INTENSIVO</h2>
@@ -174,14 +174,14 @@
         target="_blank" class="action_button"><button class="button-section-4">SAIBA MAIS</button></a>
     </div>
     <div class="content-2-section-4">
-      <img src="./src/images/treinamento-intensivo.webp">
+      <img src="./src/images/treinamento-intensivo.webp" alt="Treinamento a domicílio">
     </div>
   </section>
   <!----SECTION 4----->
   <!----SECTION 5----->
   <section class="section-5">
     <div class="content-2-section-5">
-      <img src="./src/images/day-care-educativo.webp">
+      <img src="./src/images/day-care-educativo.webp" alt="Day care educativo">
     </div>
     <div class="content-1-section-5">
       <h2 class="section-5-titulo">DAY <br>CARE EDUCATIVO</h2>
@@ -194,7 +194,7 @@
   </section>
   <!----SECTION 5----->
   <!----SECTION 6----->
-  <section class="section-6">
+  <section class="section-6" id="sobre">
     <div class="container-section-6">
       <div class="content-1-section-6">
         <p>SOBRE MIM</p>
@@ -210,7 +210,7 @@
           INSTAGRAM</a>
       </div>
       <div class="content-2-section-4">
-        <img src="./src/images/pic6.webp">
+        <img src="./src/images/pic6.webp" alt="Alexandre e um de seus dogs">
       </div>
     </div>
   </section>
@@ -232,7 +232,7 @@
           </p>
         </div>
         <div class="content-2-section-7">
-          <img src="./src/images/pic10.webp" alt="">
+          <img src="./src/images/pic10.webp" alt="Depoimentos">
         </div>
         <div class="content-3-section-7">
           <h5>DENISE ZULETA</h5>
@@ -253,7 +253,7 @@
   </section>
   <!---SECTION 7------>
   <!---SECTION 8------>
-  <section class="section-8">
+  <section class="section-8" id="servicos">
     <div class="container-section-8">
       <h5>O QUE ESTÁ INCLUÍDO EM</h5>
       <h2>MEUS SERVIÇOS</h2>
@@ -301,9 +301,9 @@
   </section>
   <!---SECTION 8------>
   <!---SECTION 9------>
-  <section class="section-9">
+  <section class="section-9" id="contato">
     <div class="container-section-9">
-      <img src="./src/images/logo-pequeno.webp" alt="">
+      <img src="./src/images/logo-pequeno.webp" alt="Logo">
       <div class="content-section-9">
         <div class="content-1-section-9">
           <p class="big"> Telefone: <a href="tel:11966133163">(11) 96613-3163</a></p>
@@ -343,5 +343,4 @@
   </section>
   <!---SECTION 9------>
 </body>
-
 </html>
