Adicionado título e favicon

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://kit.fontawesome.com/731737791f.js" crossorigin="anonymous"></script>
   <!--SCRIPT FONT AWESOME-->
-  <title>Site em breve</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <title>Keep Calm Dog - Adestramento de Cães</title>
+  <link rel="icon" href="./src/images/favicon.webp" type="image/x-icon">
+  <link rel="shortcut icon" href="./src/images/favicon.webp" type="image/x-icon">
   <link rel="stylesheet" href="./src/css/style.css">
 </head>
 
